# ChangeLog for dev-ruby/blankslate
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/blankslate/ChangeLog,v 1.2 2013/12/13 02:09:46 mrueg Exp $

*blankslate-2.1.2.4 (13 Dec 2013)

  13 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +blankslate-2.1.2.4.ebuild,
  blankslate-3.1.2.ebuild:
  Add another slot.

*blankslate-3.1.2 (12 Dec 2013)

  12 Dec 2013; Manuel Rüger <mrueg@gentoo.org> +blankslate-3.1.2.ebuild,
  +metadata.xml:
  Initial ebuild.