@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST blankslate-2.1.2.4.gem 6144 SHA256 9d35768449b5615bd3a2d21b278800d687b952dbc91ccadccac2f35670c1d64a SHA512 cfd3fdd4b4e0d2eb5bdaa70e7dec1f0255d97335aaafea72e84b586eb809345761b3dc6da7eb0e98c5d504e5037ebac287f0d19312984bb029fcf332d38b3ae8 WHIRLPOOL fa4419bd2c4657706d87cb55fd7a38e6a80fa82ff511090cfd46f6395cf2673ed059c60bd856520c86f1172ef5b03c00c3224ce8cfe8ad070b4e3e5cd892d151
 DIST blankslate-3.1.2.gem 17920 SHA256 2c31bf17c70b9fa96a5d05f8a33b2556ef23a6ba8a488bee42f278945c67b3b6 SHA512 b12737592b8d716a2255d1a08ce3fa3691fe1dcfb34fe770749b387aa07648f14fcd5b9fa3c91effa2b784b7401e75929c6ed94b4c280155d4545e9c359c84b3 WHIRLPOOL 672d4cf67526336fc4604c4aeafb24ccaeb1a98b0d50f593592b7a1605cca9fff0dc067bc779a2740d57325d4eff9d6be62f2e70c05793b61a33f186576dae2b
 EBUILD blankslate-2.1.2.4.ebuild 594 SHA256 d425c901891c95e7671e581672f8713f07ce4743ab12a653755f62d1fe3666b4 SHA512 3d0f4bdbc88bf8799c8cc97b8d8b5ea1294cd96e2114b7951a70c47d3d9b253d707182fe56e0ceca618e31dd03ce602cfaf4a8132b1b8a77d15bfe4f8d79f38d WHIRLPOOL e3329172cffe0c54c4728b9c5fcbea5f179019ba2f6c30389488511942836d20c67d07bfecdbd885f138a714d79116b3ada546583ad1ec5b75eb977a8fb7eded
-EBUILD blankslate-3.1.2.ebuild 1058 SHA256 73f792efe80a05cc33ad1d0b202519112d13f03f3145da6bd7d5c936b0135105 SHA512 af07e4c4b51891068802c6e57e214cf739b53221b9be7889a4c8523b17f2786558ae2d0682c9739ad11b5de688d50c7b819c7abbb40eb62346566510e973bfad WHIRLPOOL ad50a8b23d8f6257e5296e65e351ff9c3cd2c8d2f6218fc58f2589f97da23de37277b877266ab7edd5ace183fa60e039d668cb90eed509140619e66256543288
-MISC ChangeLog 511 SHA256 aaa6dd7774ca994f77a9953cc07cd117f988295aa9d85eace6a3f1119d7af29d SHA512 8f043b6708143156ddac84c4e47b008fd29120a463bf5611675cd74496fc47861a8578893d93761649da5b2e1e48db5dca5b6d17b73003d8d30aea3e6e2985e4 WHIRLPOOL 007bbed26b3aea20214b5e444ade048c1067c8a05203ad8cf80935643f68c8327d5106e8edabe83a9bb02a0cef9c231da6d070e51abb589bc4d30530668b9387
+EBUILD blankslate-3.1.2.ebuild 1421 SHA256 0682e8cfa4b0b335459c150d0ab79b1f139eed4499dae66bf60eceee90f479d5 SHA512 855532d279f6f77ca1d2819d7258805161d1923846258e7c66c1ab0ea754e93e7f5b1bf092de31c51d6f60695d7b6a327526b11fb50b7b623a79a6b9ac39a492 WHIRLPOOL 5abdb1066386c71ed548299c780dd35bf67e1e3860ff4b78f7886e491c3a27ca0bf520a2d5794747c3a3de9b44161c2e8ecd6fbbd9b072735af392a39c6d9640
+MISC ChangeLog 717 SHA256 d7ced164f6d0aa0b77f965fecaf45607afb8906780cff8c62dc8f98bc5d5c2af SHA512 a64e05548387c0c4d984ce59c07de584d1ec48e97e9601c11a71596dcc4c76aca6612d72d4d2ed7699273f7283daffd0763528faa08dfb005afc2b50ab1cca62 WHIRLPOOL 73546e13b550ac7009412b95d22fe53a715cdefbc065008b93fa1db224fecb69b05f8d44e643037bf45876d56f1ff67be01b817c14596221a475f47af8928785
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iF4EAREIAAYFAlL7ICwACgkQiIP6VqMIqNdpwAD8CZk2eKnter0rhqcAVFGL9eQE
+Mi1HwI+EEgwEgH817pcA/1ikcaHLggvr3eiZbJ6L7j7POnN2vRphjtai90afpBDr
+=7bjA
+-----END PGP SIGNATURE-----
