@@ -1,6 +1,10 @@
 # ChangeLog for dev-ruby/blankslate
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/blankslate/ChangeLog,v 1.2 2013/12/13 02:09:46 mrueg Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/blankslate/ChangeLog,v 1.3 2014/02/12 07:18:03 graaff Exp $
+
+  12 Feb 2014; Hans de Graaff <graaff@gentoo.org> blankslate-3.1.2.ebuild:
+  Add ruby18 since this is going to be an indirect dependency for mocha. Run
+  tests as much as possible. Install documentation.
 
 *blankslate-2.1.2.4 (13 Dec 2013)
 
